style.css
/* ... */
/* membership ends */

/* episodes starts */
.episodes{
padding-block:100px;
position: relative;
background-color: #F7EDE8;
}

.blue-shadow{
    box-shadow:#81ADC8 10px 10px 0px 0px;
}

.episodes-wrapper{
    position: relative;
}

.episodes-wrapper>img{
    position:absolute;
    top:0;
    right: 0;
    transform: translate(60%,-80%);
}

.episodes-wrapper>div>div>div{
    padding:15px;
    border:black 3px solid;
    border-radius: 11px;
    margin-bottom:30px;
}

.episodes-wrapper>div>div>div>div:first-child>div:first-child img{
    width:100%;
}

.episodes-wrapper>div>div>div>div:first-child>div:last-child h5{
    color: #CD4631;
    font-weight: 700;
    font-size: 14px;
}

.episodes-wrapper>div>div>div>div:first-child>div:last-child h4{
    font-size: 16px;
    color: #CD4631;
    padding-block:10px 10px;
    border-bottom:#4d4d4d 1px solid ;
}

.episodes-wrapper>div>div>div>div:first-child>div:last-child p{
    padding-top:15px;
    font-size: 13px;
}

.episodes-wrapper>div>div>div>div:last-child{
    padding-top:20px;
}

.episodes-wrapper>div>div>div>div:last-child>div:first-child>a{
    padding:5px 10px;
    font-size: 11px;
}

/* episodes ends */

/* sponsor starts */

.sponsor{
    padding-block:150px 100px;
    position: relative;
}

.sponsor .section-heading h2 img{
    position: absolute;
    top:0;
    left:0;
    transform: translate(-70%,-70%); 
}

.sponsor-wrapper{
    position: relative;
    z-index:1;
}

.sponsor-wrapper>img:first-of-type{
    z-index:-1;
    position: absolute;
    top:0px;
    right:0px;
    transform: translate(50%,-50%);
}

.sponsor-wrapper>img:last-of-type{
    position: absolute;
    bottom: 0px;
    transform: translate(-50%,10%);
}

.sponsor-wrapper>div>div>div>div{
    border:2px black solid;
    padding:40px;
    border-radius: 11px;
    min-height: 350px;
    margin-bottom: 25px;
}

.sponsor-wrapper>div>div>div>div:last-child{
    min-height: 400px;
}

.sponsor-wrapper>div>div>div>div:first-child p{
    padding-block:30px 80px;
}

.sponsor-wrapper>div>div>div>div:first-child>div>div h4{
    color: #CD4631;
}

.sponsor-wrapper>div>div>div>div:last-child span{
    display: inline-block;
    font-weight: 700;
    font-size: 14px;
    margin-bottom: 20px;
}

.sponsor-wrapper>div>div>div>div:last-child ul{
    padding-left: 15px;
}

.sponsor-wrapper>div>div>div>div:last-child ul li{
    font-size: 15px;
    font-weight: 500;
    margin-bottom: 15px;
}

.sponsor-wrapper>div>div>div>div:last-child ul li::marker{
    font-size:10px;
}

.sponsor-wrapper>div>div:nth-child(n+2)>div>div:last-child>ul>li:first-of-type{
    font-weight:700;
}

.sponsor-wrapper>div>div:nth-child(2)>div>div{
    border-color: #CD4631;
    background-color:#F7EDE8;
}

.sponsor-wrapper>div>div:nth-child(2)>div>div:first-child h3 span{
    font-size: 11px;
    display: inline-block;
    border-radius:5px;
    background-color: #CD4631;
    color: #F7EDE8;
    padding: 5px;
}

/* sponsor ends */

/* article starts */
.article{
    position: relative;
    padding-block:100px;
}

.article-wrapper{
    padding-bottom:50px;
    position: relative;
    z-index: 1;
}

.article-wrapper>div>div>div{
    border:3px solid black;
    border-radius: 11px;
    padding:15px;
}

.article-wrapper>div>div>div>div:first-child img{
    width:100%;
}

.article-wrapper>div>div>div>div:nth-child(2) h5{
    font-size: 14px;
    font-weight: 700;
    padding-block:40px 20px;
}

.article-wrapper>div>div>div>div:nth-child(2) p{
    padding-block:20px 20px;
    border-bottom:1px #4d4d4d solid;
    margin-bottom:10px;
    font-size: 15px;
}

.article-wrapper>div>div>div>div:last-child>div a{
    padding: 5px 10px;
    margin-right:px;
}

.article-wrapper>div>div:first-child>div{
    box-shadow: #000000 10px 10px 0px 0px;
}

.article-wrapper>div>div:first-child>div>div:nth-child(2) h3{
    color:#CD4631;
}

.article-wrapper>img:first-of-type{
    position:absolute;
    bottom:0;
    right: 0;
    z-index: -1;
    transform: translate(50%,30%);
}

.article-wrapper>img:last-of-type{
    position:absolute;
    top:0;
    z-index: -1;
    transform: translate(-50%,-50%);
}

/* article ends */

/* app starts */

.app{
    position: relative;
    background-color: #EDF3F7;
    padding-block: 100px;
}

.app>img:first-of-type{
    position: absolute;
    bottom:0;
    left: 0;
}

.app>img:last-of-type{
    position: absolute;
    bottom:0;
    right: 0;
}

.app .section-heading>span{
    display: inline-block;
    padding: 5px 10px;
    border:#CD4631 2px solid;
    border-radius:5px;
    color: #CD4631;

}

.app .section-heading>h2{
    display: block;
    padding-block:20px 30px;
}

.app-wrapper>div:first-child{
    position: relative;
    margin-bottom: 20px;
}

.app-wrapper>div:first-child img{
    position: absolute;
    transform: translate(-30%,-70%);
}

.app-wrapper>div:last-child>div img{
    width: 25px;
}

/* app ends */

/* footer starts */

.footer-wrapper{
    padding-block:100px;
    border-bottom: #4d4d4d solid 1px;
}

.footer-wrapper>div>div:first-child>div:last-child>img{
    width:20px;
}

.footer-wrapper>div>div:nth-child(3)>ul>li,
.footer-wrapper>div>div:nth-child(4)>ul>li{
    list-style-type: none;
    margin-bottom:15px;
}

.footer-wrapper>div>div:nth-child(3)>ul>li>a,
.footer-wrapper>div>div:nth-child(4)>ul>li>a{
    color: #000000;
    font-weight:500;
}

.footer-wrapper>div>div:nth-child(3)>ul>li:nth-child(2)>a,
.footer-wrapper>div>div:nth-child(4)>ul>li:nth-child(1)>a{
    color: #CD4631;
}

.footer-wrapper>div>div:nth-child(5)>span{
    display: block;
    margin-bottom:15px;
}
.footer-wrapper>div>div:nth-child(5)>div:first-of-type{
    margin-bottom:90px;
}
.footer-wrapper>div>div:nth-child(5)>div:first-of-type>img{
    height:20px;
}

.footer-wrapper>div>div:nth-child(5)>div:last-of-type>img{
    height:35px;
}

/* footer ends */

/* copyrigths start */

.copyrights>div>span>span{
    color: #CD4631;
}
/* ... */

